# gperl

./: .gitignore  CMakeLists.txt  Makefile  TODO  add.pl  config.h.cmake  gperl  hoge.pl  jit.txt  sub.pl  tarai.pl  type.c
include/: code.hpp  gen_token.hpp  gen_vmcode.hpp  gperl.hpp  math_libs.hpp  token.hpp  vmlibs.hpp
lib/greadline/: CMakeLists.txt
lib/greadline/include/: greadline.h
lib/greadline/src/: complete.c  greadline.c  history.c  keyword.c  mem.c  term.c
sample/: add.pl  addequal.pl  array.pl  array_new.pl  cmp.pl  code.pl  dec.pl  div.pl  double.pl  fib.pl  for.pl  foreach.pl  gc.pl  hash.pl  hash_ref.pl  is_obj.pl  lshift.pl  mul.pl  package.pl  recv_array.pl  rshift.pl  scope2.pl  shootout-binarytrees.pl  sub.pl  tarai.pl  tmp.pl  var.pl  while.pl
sample/benchmark/: fib.pl  shootout-binarytrees.pl  tarai.pl
sample/benchmark/ubench/: LIST  function-closure.pl  function-correct-args.pl  function-empty.pl  function-excess-args.pl  function-missing-args.pl  function-sum.pl  loop-empty-resolve.pl  loop-empty.pl  loop-sum.pl
sample/builtin/: math.pl
sample/class/: package.pl
sample/literal/: array_ref.pl  double.pl
sample/misc/: args.pl  comment.pl  omit_cury_brace.pl  ref.pl
sample/operator/: andor.pl  div.pl  inc.pl  mul.pl  multi_assign.pl  subequal.pl
sample/statement/: defined.pl  double_loop.pl  elsif.pl  for.pl  foreach.pl  if.pl  nest_func.pl  scope.pl  scope2.pl  vfunc.pl  while.pl
sample/undeveloped/: aobench.pl  map.pl  map_sub.pl  shootout-nbody.pl  vec.pl
src/: array.cpp  ast.cpp  class.cpp  compiler.cpp  func.cpp  gen_decl_code.cpp  gen_fast_vmcode.cpp  gen_label.cpp  gen_token_decl.cpp  gen_vm.cpp  gperl.cpp  graph.cpp  hash.cpp  jit.cpp  main.cpp  memory.cpp  parse.cpp  string.cpp  tmp.cpp  token.cpp  undef.cpp  vm.cpp
